# internal/models/response.go
@@ -33,11 +33,11 @@ type UserResponse struct {
 }
 
 type UserDetailReponse struct {
-	ID           int    `db:"id" json:"id"`
-	Username     string `db:"username" json:"username"`
-	FirstName    string `db:"first_name" json:"first_name"`
-	LastName     string `db:"last_name" json:"last_name"`
-	ImageProfile string `db:"image_profile" json:"image_profile"`
+	ID           int     `db:"id" json:"id"`
+	UserName     string  `db:"username" json:"username"`
+	FirstName    string  `db:"first_name" json:"first_name"`
+	LastName     string  `db:"last_name" json:"last_name"`
+	ImageProfile *string `db:"image_profile" json:"image_profile"`
 }
 
 type ChangePasswordResponse struct {
